--- a/Form2.html
+++ b/Form2.html
@@ -24,8 +24,8 @@
                     <form action="jenis_kelamin.php" method="post">
                         <td>Jenis Kelamin</td>
                         <td>
-                            <input type="radio" name="gender" value="Laki-laki">
-                            <input type="radio" name="gender" value="Perempuan">
+                            <input type="radio" name="gender" value="Laki-laki">Laki-laki
+                            <input type="radio" name="gender" value="Perempuan">Perempuan
                         </td>
                     </form>
                 </tr>
